gl/gbm: Initialize window handle (= gbm surface) like other window systems

https://bugzilla.gnome.org/show_bug.cgi?id=793997